Use site base url in all links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,15 @@
 <header>
-    <a href="/"><img src="/assets/images/david-lester.jpg"></a>
+    <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/assets/images/david-lester.jpg"></a>
     <div class="column">
         <h1>David Lester's Files</h1>
         <nav>
-            <a href="/">Home</a>
-            <a href="/document-types/about">About</a>
-            <a href="/document-types/biographical-studies">Biographical Studies</a>
-            <a href="/document-types/crisis-intervention">Crisis Intervention</a>
-            <a href="/document-types/essays-suicidology">Essays Suicidology</a>
-            <a href="/document-types/john-connolly-interviews">John Connolly Interviews</a>
-            <a href="/document-types/suicide-studies">Suicide Studies</a>
+            <a href="{{ site.baseurl }}">Home</a>
+            <a href="{{ site.baseurl }}/document-types/about">About</a>
+            <a href="{{ site.baseurl }}/document-types/biographical-studies">Biographical Studies</a>
+            <a href="{{ site.baseurl }}/document-types/crisis-intervention">Crisis Intervention</a>
+            <a href="{{ site.baseurl }}/document-types/essays-suicidology">Essays Suicidology</a>
+            <a href="{{ site.baseurl }}/document-types/john-connolly-interviews">John Connolly Interviews</a>
+            <a href="{{ site.baseurl }}/document-types/suicide-studies">Suicide Studies</a>
         </nav>
     </div>
 </header>
