--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,8 +8,8 @@
     <meta property="og:title" content="{{ page.title | escape }}">
     <meta property="og:description" content="{{ page.description }}">
     <meta property="og:image" content="{{ page.image }}">
-    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+    <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/favicon.png">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
     {% if page.stylesheets %}
         {% for stylesheet in page.stylesheets %}
