--- a/_layouts/document_type.html
+++ b/_layouts/document_type.html
@@ -10,10 +10,10 @@
         {% include document_list.html name="Documents" document_type=page.document_type preview=true %}
     </main>
     {% include footer.html %}
-    <script src="{{ site.baseurl }}/scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
     {% if page.scripts %}
         {% for script in page.scripts %}
-            <script src="{{ site.baseurl }}/scripts/{{ script }}.js"></script>
+            <script src="/scripts/{{ script }}.js"></script>
         {% endfor %}
     {% endif %}
 </body>
