Add lazy loading to preview iframes

--- a/_includes/document_list.html
+++ b/_includes/document_list.html
@@ -5,7 +5,7 @@
         {% for document in documents %}
             <li {% if include.preview %}class="preview"{% endif %}>
                 {% if include.preview %}
-                    <a href="{{ document.path}}"><iframe title="{{ document.basename }}" src="{{ document.path }}"></iframe></a>
+                    <a href="{{ document.path}}"><iframe title="{{ document.basename }}" src="{{ document.path }}" loading="lazy"></iframe></a>
                 {% endif %}
                 <div class="info">
                     <a href="{{ document.path }}">{{ document.basename }}</a> ({{ document.extname | upcase }})
