--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
 
 <body>
     {% include header.html %} {{ content }} {% include footer.html %}
-    <script src="{{ site.baseurl }}/scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
     {% if page.scripts %}
         {% for script in page.scripts %}
-            <script src="{{ site.baseurl }}/scripts/{{ script }}.js"></script>
+            <script src="/scripts/{{ script }}.js"></script>
         {% endfor %}
     {% endif %}
 </body>
