Add link to blog

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
             <a href="/document-types/essays-suicidology">Essays Suicidology</a>
             <a href="/document-types/john-connolly-interviews">John Connolly Interviews</a>
             <a href="/document-types/suicide-studies">Suicide Studies</a>
+            <a href="https://lester1942.blogspot.com/">Blog</a>
         </nav>
     </div>
 </header>
