--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,8 @@ p {
 
 .document-list > li.preview iframe {
     display: block;
-    width: 100%;
+    width: 300px;
+    max-width: calc(100vw - 50px);
     border: 0px;
     overflow: hidden;
     pointer-events: none;
