--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,4 +16,12 @@
             <link rel="stylesheet" href="/css/{{ stylesheet }}.css">
         {% endfor %}
     {% endif %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TH82CRH79W"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-TH82CRH79W');
+    </script>
 </head>
