--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
             <a href="/document-types/about">About</a>
             <a href="/document-types/biographical-studies">Biographical Studies</a>
             <a href="/document-types/crisis-intervention">Crisis Intervention</a>
+            <a href="/document-types/encyclopedia-of-personality">Encyclopedia of Personality</a>
             <a href="/document-types/essays-suicidology">Essays Suicidology</a>
             <a href="/document-types/john-connolly-interviews">John Connolly Interviews</a>
             <a href="/document-types/suicide-studies">Suicide Studies</a>
